De-update compile versions to java 8